# dsmrd

./: Makefile.am  README.md  configure.ac
dpkg/debian/: changelog  control  copyright
dsmrd/: Makefile.am  configure.ac
dsmrd/src/: Makefile.am  accept.c  crc16.c  crc16.h  daemon.c  daemon.h  dispatch.h  dsmr.c  dsmr.h  http.c  ini.c  logging.h  options.c  options.h  serial.c  serial.h  util.c  util.h
dsmrd/www/: index.html
src/: Makefile.am  accept.c  accept.h  avahi.c  crc16.c  crc16.h  daemon.c  daemon.h  database.c  database.h  dispatch.c  dispatch.h  dnssd.c  dnssd.h  dsmr.c  dsmr.h  http.c  http.h  ini.c  ini.h  list.c  list.h  logging.c  logging.h  main.c  mqtt.c  mqtt.h  options.c  options.h  p1sim.c  publish.c  publish.h  rbtree.c  rbtree.h  rest.c  rest.h  serial.c  serial.h  statistics.c  statistics.h  (+4 more)
www/: Makefile.am  index.html  main.js  screen.css
www/images/: Makefile.am
