wwwdir = $(pkgdatadir)/www/images
dist_www_DATA  = ui-icons_444444_256x240.png
dist_www_DATA += ui-icons_555555_256x240.png
dist_www_DATA += ui-icons_777620_256x240.png
dist_www_DATA += ui-icons_777777_256x240.png
dist_www_DATA += ui-icons_cc0000_256x240.png
dist_www_DATA += ui-icons_ffffff_256x240.png
